--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,13 +2,13 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
 publish_mode: editorial_workflow
-logo_url: "static/DPC.ico"
+logo_url: static/DPC.ico
 media_folder: "static/images/uploads"
-public_folder: "images/uploads"
+public_folder: "public/images/uploads"
 collections:
   - name: template
     label: Posts
-    folder: "/posts"
+    folder: "content/posts"
     create: true
     slug: "{{slug}}"
     fields:
@@ -18,7 +18,7 @@ collections:
 
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
     label: "Blog" # Used in the UI
-    folder: "posts/blog" # The path to the folder where the documents are stored
+    folder: "content/posts" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
