--- a/config.toml
+++ b/config.toml
@@ -27,12 +27,12 @@ paginate = 5
     weight = 2
 
   [[menu.main]]
-    name = "Work"
+    name = "Projects & Works"
     url = "/works/"
     weight = 3
 
   [[menu.main]]
-    name = "Writing"
+    name = "Blog & Writes"
     url = "/posts/"
     weight = 4
 
@@ -172,14 +172,14 @@ paginate = 5
     testimonial__description = ""
 
   [[params.testimonial_item]]
-    name = "Hanna Septimus"
+    name = "Amarya Henna"
     image = "https://via.placeholder.com/400x400"
     designation = "Product Designer"
     link = "https://twitter.com/"
     content = "Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration"
 
   [[params.testimonial_item]]
-    name = "Carla Rosser"
+    name = "HMSDev LLC."
     image = "https://via.placeholder.com/400x400"
     designation = "Statistician"
     link = "https://facebook.com/"
@@ -239,8 +239,8 @@ paginate = 5
   # Blog Section
   [params.blog]
     enable = true
-    blog__title = "Hedaya's Thoughts and Musings"
-    blog__description = "My Thoughts and Musings"
+    blog__title = "The Copy Corner"
+    blog__description = "Welcome to The Copy Corner, where words come to play and marketing magic happens! Dive into a world of tips, tricks, and tales from the copywriting and digital marketing universe. Whether you're looking to boost your brand, master the art of storytelling, or simply enjoy a good read, we've got you covered. Grab a cup of coffee, get comfy, and let's turn those blank pages into brilliant stories!"
 
 
   #-------------------------------
