--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,13 +2,13 @@ backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
 publish_mode: editorial_workflow
-logo_url: "static/DPC.ico"
+logo_url: static/DPC.ico
 media_folder: "static/images/uploads"
-public_folder: "images/uploads"
+public_folder: "public/images/uploads"
 collections:
   - name: template
     label: Posts
-    folder: "/posts"
+    folder: "content/posts"
     create: true
     slug: "{{slug}}"
     fields:
@@ -16,14 +16,45 @@ collections:
       - { label: "Date", name: "date", widget: "datetime" }
       - { label: "Body", name: "body", widget: "markdown" }
 
+  - name: Projects
+    label: Project
+    folder: "content/works"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Description", name: "description", widget: "text" }
+      - { label: "Category", name: "category", widget: "text" }
+      - {
+          label: "Date",
+          name: "date",
+          date_format: "DD.MM.YYYY",
+          time_format: "HH:mm",
+          widget: "datetime",
+        }
+      - { label: "Client", name: "client", widget: "text" }
+      - { label: "Role", name: "role", widget: "text" }
+      - { label: "Featured Image", name: "image", widget: "image" }
+      - { label: "Image Caption", name: "image_caption", widget: "text" }
+      - { label: "Body", name: "body", widget: "markdown" }
+
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "posts/blog" # The path to the folder where the documents are stored
+    label: "Blog Post" # Used in the UI
+    folder: "content/posts/blog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
       - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "thumbnail", widget: "image" }
+      - { label: "Description", name: "description", widget: "text" }
+      - {
+          label: "Publish Date",
+          name: "date",
+          date_format: "DD.MM.YYYY",
+          time_format: "HH:mm",
+          widget: "datetime",
+        }
+      - { label: "Featured Image", name: "image", widget: "image" }
+      - { label: "Image Caption", name: "image_caption", widget: "text" }
+      - { label: "Tags", name: "tags", widget: "list" }
       - { label: "Body", name: "body", widget: "markdown" }
