--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 #-------------------------------
 # General Site Settings
-baseURL = "http://dayapetecopy.com/"
+baseURL = "https://dayapetecopy.netlify.app/"
 languageCode = "en-us"
 title = "DayaPete.com"
 googleAnalytics = "" # Add your identifier. For example UA-99631805-1.
