--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 #-------------------------------
 # General Site Settings
+# Change BaseURL When we connect to domain
 baseURL = "https://dayapetecopy.netlify.app/"
 languageCode = "en-us"
 title = "DayaPete.com"
