--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@
 # General Site Settings
 baseURL = "https://dayapetecopy.netlify.app/"
 languageCode = "en-us"
-title = "DayaPete.com"
+title = "DayaPeteCopy.com"
 googleAnalytics = "" # Add your identifier. For example UA-99631805-1.
 paginate = 5
 
